manifests/1-apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability-demo
  labels:
    name: observability-demo
    app.kubernetes.io/part-of: observability-stack
