manifests/1-apps/quarkus-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-api
  namespace: observability-demo
  labels:
    app: quarkus-api
    app.kubernetes.io/name: quarkus-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: observability-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-api
  template:
    metadata:
      labels:
        app: quarkus-api
        app.kubernetes.io/name: quarkus-api
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: observability-stack
        demo: observability
    spec:
      containers:
      - name: quarkus-api
        image: quay.io/cldmnky/observability-quarkus-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4003
          protocol: TCP
          name: http
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        livenessProbe:
          tcpSocket:
            port: 4003
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 4003
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-api
  namespace: observability-demo
  labels:
    app: quarkus-api
    app.kubernetes.io/name: quarkus-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: observability-stack
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4003
    protocol: TCP
    name: http
  selector:
    app: quarkus-api
