manifests/1-apps/node-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: observability-demo
  labels:
    app: node-app
    app.kubernetes.io/name: node-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: observability-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: sidecar
        instrumentation.opentelemetry.io/inject-nodejs: "demo-instrumentation"
      labels:
        app: node-app
        app.kubernetes.io/name: node-app
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: observability-stack
    spec:
      serviceAccountName: otel-collector-sidecar
      containers:
      - name: node-app
        image: quay.io/cldmnky/observability-node-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4002
          protocol: TCP
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 4002
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 4002
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: observability-demo
  labels:
    app: node-app
    app.kubernetes.io/name: node-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: observability-stack
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4002
    protocol: TCP
    name: http
  selector:
    app: node-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-app
  namespace: observability-demo
  labels:
    app: node-app
    app.kubernetes.io/name: node-app
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: observability-stack
spec:
  to:
    kind: Service
    name: node-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
